--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-From:
-http://www.mpetroff.net/archives/2012/09/14/kindle-weather-display/
+#Kinde weather display
+merge online screen saver code from mobileread.com
+And optimize for kindle paperwhite WiFi.
+
+Use HeFeng API and icons.
